--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <h1>GHOST MAYEE PROFILE</h1>
+    <h1>MAYEE AYEE PROFILE</h1>
     <br />
     <h3>Name: Kennedy Johnson</h3>
     <img src="ghostayee.png" alt="ghost coder" width="400" height="400" />
@@ -43,5 +43,42 @@
       ><i class="fa-brands fa-square-linkedin fa-2xl" style="color: #075ced"></i
     ></a>&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube fa-2xl" style="color: #ec0909;"></i></a>
+    <h3>Hobbies</h3>
+    <ul>
+      <li>Reading a book </li>
+      <li>Playing football</li>
+      <li>listening to music</li>
+      <li>Traveling</li>
+      <li>Coding</li>
+      <li>Watching movies</li>
+    </ul>
+    <h3>My daily routine</h3>
+    <ol>
+        <li>Wake up at 6:00 AM</li>
+        <li>Exercise for 30 minutes</li>
+        <li>Have breakfast</li>
+        <li>Go to work</li>
+        <li>Lunch break at 1:00 PM</li>
+        <li>Code until evening</li>
+        <li>Supper at 7:30 PM</li>
+        <li>Relax or watch TV</li>
+        <li>Go to bed at 10:00 PM</li>
+    </ol>
+    <h3>Personal Details</h3>
+    <dl>
+      <dt>Name:</dt>
+      <dd>Kennedy Johnson</dd>
+      <dt>Age:</dt>
+      <dd>17 Years old</dd>
+      <dt>Location</dt>
+      <dd>Nairobi, Kenya</dd>
+      <dt>Email:</dt>
+      <dd>kenniejohson@gmail.com</dd>
+      <dt>Profession:</dt>
+      <dd>Chemist</dd>
+    </dl>
+
+
+
   </body>
 </html>
