--- a/the_task1/webdev.html
+++ b/the_task1/webdev.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel = "stylesheet" href = "style.css"/>
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -14,6 +14,12 @@
     />
   </head>
   <body>
-    <h3>simplilearn <i class="fa-brands fa-youtube fa-xl" style="color: #f10920;"></i> </h3>
+    <h3>
+      simply learn
+      <i class="fa-brands fa-youtube fa-xl" style="color: #f10920"></i>
+    </h3>
+    <h1>WEB DEVELOPMENT</h1>
+    <h1>PROJECTS</h1>
+    <h1>FOR BEGINNERS</h1>
   </body>
 </html>
