--- a/hello.html
+++ b/hello.html
@@ -73,5 +73,58 @@
 <dd>Cascading style sheet</dd>
 <dt>JavaScript</dt>
 <dd>A programming language commonly used in web development</dd>
+<table table border="1">
+  <thead>Students</thead>
+  <tr>
+    <th>Name </th>
+    <th>Age</th>
+    <th>Adm</th>
+    <th>City</th>
+  </tr>
+  <tr>
+    <td>mark</td>
+    <td>20</td>
+    <td>5508</td>
+    <td>Nairobi</td>
+</tr>
+<tr>
+  <td>ashley</td>
+  <td>20</td>
+  <td>5455</td>
+  <td>Mombasa</td>
+</tr>
+</table>
+<table table border="1">
+  <thead>The richest dudes</thead>
+  <tr>
+    <th>No.</th>
+    <th>Full Name</th>
+    <th>Position</th>
+    <th>Salary</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>Bill Gates</td>
+    <td>Founder Microsoft</td>
+    <td>$1000</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>Steve Jabs</td>
+    <td>Founder Apple</td>
+    <td>$1200</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>Larry Page</td>
+    <td>Founder Google</td>
+    <td>$1100</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>Mark Zuckerberg</td>
+    <td>Founder Facebook</td>
+    <td>$1300</td>
+  </tr>
   </body>
 </html>
