all the task on tables updated

--- a/profile.html
+++ b/profile.html
@@ -26,26 +26,11 @@
       I enjoy learning new skills, reading about science and tech, and keeping
       up with things that push me to grow. I’m focused, reliable, and open to
       new opportunities that help me improve both personally and professionally.
-    </p><br>
-    <a href="https://www.facebook.com/" target="_blank"
-      ><i class="fa-brands fa-square-facebook fa-2xl" style="color: #0817e7"></i
-    ></a>&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://www.instagram.com/" target="_blank"
-      ><i class="fa-brands fa-instagram fa-2xl" style="color: #f910af"></i
-    ></a>&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://x.com/"target="_blank"
-      ><i
-        class="fa-brands fa-square-x-twitter fa-2xl"
-        style="color: #0f0f0f"
-      ></i
-    ></a>&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://ke.linkedin.com/" target="_blank"
-      ><i class="fa-brands fa-square-linkedin fa-2xl" style="color: #075ced"></i
-    ></a>&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube fa-2xl" style="color: #ec0909;"></i></a>
+    </p>
+    <br />
     <h3>Hobbies</h3>
     <ul>
-      <li>Reading a book </li>
+      <li>Reading a book</li>
       <li>Playing football</li>
       <li>listening to music</li>
       <li>Traveling</li>
@@ -54,15 +39,15 @@
     </ul>
     <h3>My daily routine</h3>
     <ol>
-        <li>Wake up at 6:00 AM</li>
-        <li>Exercise for 30 minutes</li>
-        <li>Have breakfast</li>
-        <li>Go to work</li>
-        <li>Lunch break at 1:00 PM</li>
-        <li>Code until evening</li>
-        <li>Supper at 7:30 PM</li>
-        <li>Relax or watch TV</li>
-        <li>Go to bed at 10:00 PM</li>
+      <li>Wake up at 6:00 AM</li>
+      <li>Exercise for 30 minutes</li>
+      <li>Have breakfast</li>
+      <li>Go to work</li>
+      <li>Lunch break at 1:00 PM</li>
+      <li>Code until evening</li>
+      <li>Supper at 7:30 PM</li>
+      <li>Relax or watch TV</li>
+      <li>Go to bed at 10:00 PM</li>
     </ol>
     <h3>Personal Details</h3>
     <dl>
@@ -77,8 +62,65 @@
       <dt>Profession:</dt>
       <dd>Chemist</dd>
     </dl>
-
-
-
+    <h3>Education & Experience</h3>
+    <table border="1px">
+      <tr>
+        <th colspan="4">My Education & Work History</th>
+      </tr>
+      <tr>
+        <th>Year</th>
+        <th>Institute / Company</th>
+        <th>Qualification / Role</th>
+        <th>Notes</th>
+      </tr>
+      <tr>
+        <td rowspan="2">2021</td>
+        <td>KCA University</td>
+        <td>Bachelors degree in computer science</td>
+        <td>Completed</td>
+      </tr>
+      <tr>
+        <td>KCA University</td>
+        <td>Attachment (IT SUPPORT)</td>
+        <td>3 months</td>
+      </tr>
+      <tr>
+        <td>2023</td>
+        <td>TechSoft Solutions</td>
+        <td>Junior Developer</td>
+        <td>Internship</td>
+      </tr>
+      <tr>
+        <td>2024</td>
+        <td>DevWorks Ltd</td>
+        <td>Software Developer</td>
+        <td>Internship</td>
+      </tr>
+    </table>
+    <h3>Contact</h3>
+    <a href="https://www.facebook.com/" target="_blank"
+      ><i
+        class="fa-brands fa-square-facebook fa-2xl"
+        style="color: #0817e7"
+      ></i></a
+    >&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="https://www.instagram.com/" target="_blank"
+      ><i class="fa-brands fa-instagram fa-2xl" style="color: #f910af"></i></a
+    >&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="https://x.com/" target="_blank"
+      ><i
+        class="fa-brands fa-square-x-twitter fa-2xl"
+        style="color: #0f0f0f"
+      ></i></a
+    >&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="https://ke.linkedin.com/" target="_blank"
+      ><i
+        class="fa-brands fa-square-linkedin fa-2xl"
+        style="color: #075ced"
+      ></i></a
+    >&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="https://www.youtube.com/" target="_blank"
+      ><i class="fa-brands fa-youtube fa-2xl" style="color: #ec0909"></i></a
+    >
   </body>
 </html>
