--- a/hello.html
+++ b/hello.html
@@ -94,7 +94,7 @@
   <td>Mombasa</td>
 </tr>
 </table>
-<table table border="1">
+<table table border="1" style ="border-collapse: collapse;">
   <thead>The richest dudes</thead>
   <tr>
     <th>No.</th>
@@ -126,5 +126,47 @@
     <td>Founder Facebook</td>
     <td>$1300</td>
   </tr>
+</table>
+<h3>Create tables in HTML</h3>
+<table table border="1" style ="border-collapse: collapse;">
+  <tr>
+    <th>Column 1 </th>
+    <th>Column 2</th>
+    <th>Column 3</th>
+  </tr>
+  <tr>
+    <td rowspan="2">Row 1, Cell 1</td>
+    <td> Row 1 Cell 2</td>
+    <td> Row 1 Cell 3</td>
+  </tr>
+  <tr>
+    <td>Row 2 cell 2</td>
+    <td>Row 2 cell 3</td>
+  </tr>
+  <tr>
+    <td colspan ="3">Row 3 cell 1</td>
+  </tr>
+</table>
+<h3>HTML Table</h3>
+<table border="1" style ="border-collapse: collapse;">
+  <tr>
+    <td colspan = "2">Cell 1</td>
+    <td>Cell 2</td>
+    <td>Cell 3</td>
+  </tr>
+  <tr>
+    <td rowspan = "3">cell 4 </td>
+    <td>Cell 5</td>
+    <td>Cell 6</td>
+    <td>Cell 7</td>
+  </tr>
+  <tr>
+    <td colspan ="4">Cell 8</td>
+  </tr>
+  <tr>
+    <td>Cell 9</td>
+    <td colspan ="2">Cell 10</td>
+  </tr>
+</table>
   </body>
 </html>
