--- a/hello.html
+++ b/hello.html
@@ -168,5 +168,24 @@
     <td colspan ="2">Cell 10</td>
   </tr>
 </table>
+<form action="">
+  <label for="">Full Name </label><br>
+  <input type="text"><br>
+  <label for="">City</label><br>
+  <input type="text"><br>
+  <label for="">Email</label><br>
+  <input type="email"><br>
+  <label for="">password</label><br>
+  <input type="password" placeholder ="123abc"><br>
+  <label for="">DOB</label><br>
+  <input type="date"><br>
+  <label for="">CV</label><br>
+  <input type="file"><br>
+  <label for="">gender</label><br>
+  <label for="">male</label>
+  <input type="radio" name = "gender">
+  <label for="">female</label>
+  <input type="radio" name = "gender "><br>
+</form>
   </body>
 </html>
