--- a/form.html
+++ b/form.html
@@ -28,6 +28,7 @@
             <input type="date"><br>
             <label for="">Enter your Address</label><br>
             <textarea name="" id="" cols="30" rows="5"></textarea><br>
+            <input type="submit" value="Submit">
 
         </fieldset>
     </form>
