the today class and practice and notes

--- a/hello.html
+++ b/hello.html
@@ -187,5 +187,12 @@
   <label for="">female</label>
   <input type="radio" name = "gender "><br>
 </form>
+<label for="">Select favorite car</label>
+<select name="" id="">
+  <option value="">Audi</option>
+  <option value="">Toyota</option>
+  <option value="">BMW</option>
+  <option value="">Range</option>
+</select>
   </body>
 </html>
