--- a/profile.html
+++ b/profile.html
@@ -97,6 +97,29 @@
         <td>Internship</td>
       </tr>
     </table>
+    <br />
+    <h2>Send me a message</h2>
+    <p>Please fill in the form below to get in touch with me</p>
+    <form action="">
+      <input type="text" placeholder="First Name" /> &nbsp;
+      <input type="text" placeholder="Last Name" /><br /><br />
+      <input type="email" placeholder="Email Address" />&nbsp;
+      <input type="phone" placeholder="Phone Number" /><br /><br />
+      <textarea
+        name="text"
+        id="txt"
+        rows="6"
+        cols="46"
+        placeholder="message"
+      ></textarea
+      ><br />
+      <input type="checkbox" />
+      <label for=""
+        >I've read and agree with <u> Terms of service</u> and
+        <u>Privacy Policy</u></label
+      ><br /><br />
+      <input type="submit" name="submit" value="Submit" />
+    </form>
     <h3>Contact</h3>
     <a href="https://www.facebook.com/" target="_blank"
       ><i
@@ -120,7 +143,7 @@
       ></i></a
     >&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="https://www.youtube.com/" target="_blank"
-      ><i class="fa-brands fa-youtube fa-2xl" style="color: #ec0909"></i></a
-    >
+      ><i class="fa-brands fa-youtube fa-2xl" style="color: #ec0909"></i
+    ></a>
   </body>
 </html>
