--- a/hello.html
+++ b/hello.html
@@ -194,5 +194,7 @@
   <option value="">BMW</option>
   <option value="">Range</option>
 </select>
+<h2>block</h2>
+<h2>Inline  </h2>
   </body>
 </html>
