--- a/property.html
+++ b/property.html
@@ -12,17 +12,32 @@
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam harum
         autem itaque quas nulla iure incidunt! Facilis iusto necessitatibus
         adipisci deserunt ducimus similique illo repellendus odit ullam
-        consequuntur. Totam, ullam.
+        consequuntur. Totam, ullam. Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Sunt sit ut, a consequatur architecto aspernatur
+        provident cum exercitationem nesciunt soluta. Aspernatur sunt fugit
+        quasi nulla molestias perferendis explicabo dolore est?
       </p>
     </div>
 
-    <div style="background-image: url('girl.jpg'); height: 200px; background-size:cover; width: 500px; background-position: center; color:rgb(238, 61, 7); ">
+    <div
+      style="
+        background-image: url('flower.jpg');
+        height: 200px;
+        background-size: cover;
+        width: 500px;
+        background-position: center;
+        color: white;
+      "
+    >
       <h1>Background image</h1>
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni nisi
         consequatur eligendi reprehenderit sit incidunt laboriosam veritatis
         error quas voluptatem blanditiis, vero nobis pariatur corporis autem,
-        aut tenetur sunt! Iure?
+        aut tenetur sunt! Iure? Lorem ipsum dolor sit amet, consectetur
+        adipisicing elit. Saepe, accusamus molestiae culpa qui iusto tempore
+        deserunt dolores aspernatur dignissimos minus officia, doloremque
+        ratione porro, repellat nisi error nesciunt aperiam? Reiciendis.
       </p>
     </div>
   </body>
