mon start again

--- a/the_task1/webdev.html
+++ b/the_task1/webdev.html
@@ -14,12 +14,30 @@
     />
   </head>
   <body>
-    <h3>
-      simply learn
+    <h2>
+      simpl<sub>i</sub>learn
       <i class="fa-brands fa-youtube fa-xl" style="color: #f10920"></i>
-    </h3>
-    <h1>WEB DEVELOPMENT</h1>
-    <h1>PROJECTS</h1>
-    <h1>FOR BEGINNERS</h1>
+    </h2>
+    <img src="a person facing righ.png" alt="">
+    <p
+      style="
+        font-size: 50px;
+        margin-top: 140px;
+        background-color: orange;
+        margin-right: 380px;
+        margin-bottom: 4px;"
+    >
+      WEB DEVELOPMENT
+    </p>
+    <p style = "
+        font-size: 50px;
+        background-color: orange;
+        margin-right: 680px;
+        margin-top: 4px;
+        margin-bottom: 4px;">PROJECTS</p>
+    <p style = "
+        font-size: 50px;
+        margin-right: 400px;
+        margin-top: 4px;">FOR BEGINNERS</p>
   </body>
 </html>
