--- a/font.html
+++ b/font.html
@@ -6,7 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 style="text-decoration: line-through; font-style: italic">This is Task 1 paragraph</h1>
+    <h1 style="text-decoration: line-through; font-style: italic">
+      This is Task 1 paragraph
+    </h1>
     <p
       style="
         color: blue;
@@ -21,3 +23,4 @@
     </p>
   </body>
 </html>
+git
