terminal night with herculian checklist

--- a/padding.html
+++ b/padding.html
@@ -9,9 +9,9 @@
             padding-left: 100px;
             padding-right: 100px;
             padding-top: 0px;
-            border: 2px solid mediumturquoise;
-            margin: 199px;
-            margin-right: 1200px;
+            background-color: rgba(255, 89, 23, 0);
+            border: 1px solid mediumturquoise;
+            margin: 500px 800px;
 
         }
     </style>
